[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme>=22.8.0"]
build-backend = "hatchling.build"

[project]
dynamic = ["readme", "version"]
name = "lunr"
description = "A Python implementation of Lunr.js"
authors = [{ name = "Yeray Diaz Diaz", email = "yeraydiazdiaz@gmail.com" }]
requires-python = ">=3.7"
license = "MIT"
keywords = ["lunr", "full", "text", "search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Text Processing",
]
dependencies = [
    "typing-extensions; python_version<'3.8'",
    "importlib_metadata; python_version<'3.8'",
]

[project.urls]
Documentation = "https://lunr.readthedocs.io/en/latest/"
Changelog = "https://github.com/yeraydiazdiaz/lunr.py/blob/master/CHANGELOG.md"
"Bug Tracker" = "https://github.com/yeraydiazdiaz/lunr.py/issues"
"Source Code" = "https://github.com/yeraydiazdiaz/lunr.py"


[project.optional-dependencies]
languages = [
    "nltk"
]
tests = [
    "lunr[languages]",
    "pytest",
    "pytest-timeout",
    "tox",
    "coverage",
]
docs = [
    "furo",
    "myst-parser",
    "sphinx",
    "sphinx-autobuild",
]
local = [
    "build",
    "twine",
    "pytest-benchmark",
    "wheel",
    "mypy",
    "flake8",
    "black",
    "pdbpp",
    "ipython",
    "mypy",
    "hatch-fancy-pypi-readme",
]
dev = ["lunr[tests,docs,local]"]

[tool.hatch.version]
path = "lunr/__init__.py"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"
